# hratc2015_dataset

./: CMakeLists.txt  Notes.txt  config.rviz  package.xml
ground_truth/: gps.csv  odom.csv
launch/: husky.launch  husky_urdf.launch  localization.launch  play_dataset.launch
src/: csv_creator.cpp
urdf/: gps.urdf.xacro  husky.urdf.xacro
urdf/arm/: fsr_husky_arm.urdf.xacro
urdf/fsr_husky_parts/: alfa_tube2h.urdf.xacro  front_cover.urdf.xacro  gps_antenna.urdf.xacro  husky_bridge.urdf.xacro  mti.urdf.xacro  pointgrey_flea3.urdf.xacro  tilt.urdf.xacro  tim55x.urdf.xacro  top_cover.urdf.xacro
urdf/husky_parts/: parts.urdf.xacro  wheel.urdf.xacro
